[gd_scene load_steps=5 format=3 uid="uid://dsnnvpgkbery5"]

[ext_resource type="Script" uid="uid://c3n8ipsa16ixg" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://df7awq87w0soa" path="res://img/backgrounds/main_background.png" id="2_ekxnf"]
[ext_resource type="AudioStream" uid="uid://d4d0xfn1owjib" path="res://audio/music/home.ogg" id="3_bqqt6"]
[ext_resource type="PackedScene" uid="uid://cdrh1p1a7r1t6" path="res://scenes/credits.tscn" id="5_8ln24"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="OuterContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="OuterContainer"]
layout_mode = 2
texture = ExtResource("2_ekxnf")
expand_mode = 3

[node name="MenuContainer" type="CenterContainer" parent="OuterContainer"]
layout_mode = 2

[node name="MenuItems" type="GridContainer" parent="OuterContainer/MenuContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2

[node name="TmpGameName" type="RichTextLabel" parent="OuterContainer/MenuContainer/MenuItems"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_font_sizes/normal_font_size = 50
text = "Space Clicker"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="OuterContainer/MenuContainer/MenuItems"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="OuterContainer/MenuContainer/MenuItems"]
layout_mode = 2
text = "Continue"

[node name="Language" type="Button" parent="OuterContainer/MenuContainer/MenuItems"]
layout_mode = 2
text = "Language"

[node name="CreditsButton" type="Button" parent="OuterContainer/MenuContainer/MenuItems"]
layout_mode = 2
text = "Credits"

[node name="QuitGameButton" type="Button" parent="OuterContainer/MenuContainer/MenuItems"]
layout_mode = 2
text = "Quit"

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bqqt6")
volume_db = -6.0

[node name="Credits" parent="." instance=ExtResource("5_8ln24")]
layout_mode = 1

[connection signal="pressed" from="OuterContainer/MenuContainer/MenuItems/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="OuterContainer/MenuContainer/MenuItems/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="OuterContainer/MenuContainer/MenuItems/Language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="OuterContainer/MenuContainer/MenuItems/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="OuterContainer/MenuContainer/MenuItems/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
